[tool.poetry]
name = "documentdb"
version = "0.0.1"
description = ""
authors = ["Dan Sikes <dan@apagea.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ujson = "^5.10.0"
databases = {extras = ["aiosqlite"], version = "^0.9.0"}


[tool.poetry.group.dev.dependencies]
randomname = "^0.2.1"
pytest = "^8.3.2"
black = "^24.4.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
